--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,7 @@ async-trait = "0.1.52"
 itertools = "0.10.3"
 rust_decimal = "1.22"
 dirs-next = "2.0"
-clap = "3.1.5"
-structopt = "0.3.26"
+clap = { version = "3.1.5", features = ["derive"] }
 syntect = { version = "4.6", default-features = false, features = ["metadata", "default-fancy"]}
 unicode-segmentation = "1.9"
 
