--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,13 @@ env:
   CARGO_INCREMENTAL: 0
 
 jobs:
-  format:
-    name: Format
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Cargo fmt
-        run: cargo fmt --all -- --check
+  # format:
+  #   name: Format
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Cargo fmt
+  #       run: cargo fmt --all -- --check
 
   lint:
     name: Lint
@@ -69,7 +69,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build: [linux, linux-arm, macos, win-msvc, win32-msvc]
+        build: [linux, macos, win-msvc]
+        # build: [linux, linux-arm, macos, win-msvc, win32-msvc]
         include:
         - build: linux
           os: ubuntu-18.04
