--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,10 +76,10 @@ jobs:
           os: ubuntu-18.04
           rust: stable
           target: x86_64-unknown-linux-musl
-        - build: linux-arm
-          os: ubuntu-18.04
-          rust: stable
-          target: arm-unknown-linux-gnueabihf
+        # - build: linux-arm
+        #   os: ubuntu-18.04
+        #   rust: stable
+        #   target: arm-unknown-linux-gnueabihf
         - build: macos
           os: macos-latest
           rust: stable
@@ -88,10 +88,10 @@ jobs:
           os: windows-2019
           rust: stable
           target: x86_64-pc-windows-msvc
-        - build: win32-msvc
-          os: windows-2019
-          rust: stable
-          target: i686-pc-windows-msvc
+        # - build: win32-msvc
+        #   os: windows-2019
+        #   rust: stable
+        #   target: i686-pc-windows-msvc
     steps:
       - uses: actions/checkout@v2
 
