--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -139,11 +139,11 @@ jobs:
         with:
           crate: cargo-workspaces
 
-      - name: Cargo publish
-        run: |
-          git config --global user.email "runner@gha.local"
-          git config --global user.name "Github Action"
-          cargo workspaces publish \
-            --yes --force '*' --exact \
-            --no-git-commit --allow-dirty --skip-published --token ${{ secrets.CRATES_IO_TOKEN }} \
-            custom ${{ needs.release.outputs.gobang_version }}
+      # - name: Cargo publish
+      #   run: |
+      #     git config --global user.email "runner@gha.local"
+      #     git config --global user.name "Github Action"
+      #     cargo workspaces publish \
+      #       --yes --force '*' --exact \
+      #       --no-git-commit --allow-dirty --skip-published --token ${{ secrets.CRATES_IO_TOKEN }} \
+      #       custom ${{ needs.release.outputs.gobang_version }}
