--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,11 +103,10 @@ jobs:
           override: true
           target: ${{ matrix.target }}
 
-      - name: Use Cross
+      - name: Use Cargo
         shell: bash
         run: |
-          cargo install cross
-          echo "CARGO=cross" >> $GITHUB_ENV
+          echo "CARGO=cargo" >> $GITHUB_ENV
           echo "TARGET_FLAGS=--target ${{ matrix.target }}" >> $GITHUB_ENV
           echo "TARGET_DIR=./target/${{ matrix.target }}" >> $GITHUB_ENV
 
