--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ syntect = { version = "4.6", default-features = false, features = ["metadata", "
 unicode-segmentation = "1.9"
 url = "2.2.2"
 uuid = { version = "0.8", features = ["serde", "v4"] }
+regex = "1"
 
 [target.'cfg(all(target_family="unix",not(target_os="macos")))'.dependencies]
 which = "4.2"
