--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,6 +105,8 @@ jobs:
       shell: bash
       run: |
         staging="gobangx-${{ env.GOBANG_VERSION }}-${{ matrix.target }}"
+        mkdir -p "$staging"
+        
         cp {README.md,LICENSE} "$staging/"
 
         if [ "${{ matrix.os }}" = "windows-2019" ]; then
