--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build: [linux, macos, win-msvc]
+        build: [linux]
         # build: [linux, linux-arm, macos, win-msvc, win32-msvc]
         include:
         - build: linux
@@ -80,14 +80,14 @@ jobs:
         #   os: ubuntu-18.04
         #   rust: stable
         #   target: arm-unknown-linux-gnueabihf
-        - build: macos
-          os: macos-latest
-          rust: stable
-          target: x86_64-apple-darwin
-        - build: win-msvc
-          os: windows-2019
-          rust: stable
-          target: x86_64-pc-windows-msvc
+        # - build: macos
+        #   os: macos-latest
+        #   rust: stable
+        #   target: x86_64-apple-darwin
+        # - build: win-msvc
+        #   os: windows-2019
+        #   rust: stable
+        #   target: x86_64-pc-windows-msvc
         # - build: win32-msvc
         #   os: windows-2019
         #   rust: stable
