--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gobang"
-version = "0.1.0-alpha.5"
-authors = ["Takayuki Maeda <takoyaki0316@gmail.com>"]
+version = "0.3.0"
+authors = ["xxf098 <xxf098@protonmail.com>"]
 edition = "2018"
 license = "MIT"
 homepage = "https://github.com/xxf098/gobangx"
