--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ exclude = ["resources/"]
 
 [workspace]
 members=[
-    "database-tree"
+    "database-tree",
+    "sqlparse",
 ]
 
 [dependencies]
@@ -30,6 +31,7 @@ toml = "0.5"
 strum = "0.24"
 strum_macros = "0.24"
 database-tree = { path = "./database-tree", version = "0.1.0-alpha.5" }
+sqlparse = { path = "./sqlparse", version = "0.1.0" }
 easy-cast = "0.4"
 async-trait = "0.1.52"
 itertools = "0.10.3"
