--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Add clippy
         run: rustup component add clippy
       - name: Run lint
-        run: cargo clippy
+        run: cargo build --release
 
   unit_tests:
     name: Unit Tests
